2011-08-04  Richard Guenther  <rguenther@suse.de>

PR fortran/49957
	* trans-array.c (add_to_offset): New function.
	(gfc_conv_array_ref): Build the array index expression in optimally
	associated order.
	(gfc_walk_variable_expr): Adjust for the backward walk.

	* gfortran.dg/vect/O3-pr49957.f: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@177368 138bc75d-0d04-0410-961f-82ee72b054a4